// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders active class when is active 1`] = `
<a
  className="nav-item nav-link text-dark active"
  href="/"
  onClick={[Function]}
>
  #LABEL
</a>
`;

exports[`TabButton renders default 1`] = `
<a
  className="nav-item nav-link text-dark"
  href="/"
  onClick={[Function]}
>
  #LABEL
</a>
`;

exports[`TabButton renders totalCount next to label 1`] = `
<a
  className="nav-item nav-link text-dark"
  href="/"
  onClick={[Function]}
>
  foo
  <span
    className="small text-secondary ml-1"
  >
    (
    10
    )
  </span>
</a>
`;

exports[`TabButton renders with additional classnames 1`] = `
<a
  className="nav-item nav-link text-dark foo"
  href="/"
  onClick={[Function]}
>
  #LABEL
</a>
`;
